# tsutmb-hostel

./: .env.example  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.override.yaml  docker-compose.yaml  install.sh  pyproject.toml  requirements.txt  update.sh
.github/workflows/: ci-cd.yml
src/: app.py  constants.py  settings.py  test.py
src/core/: __init__.py  config.py  config_utils.py  loggers.py
src/core/extensions/google_sheets/: api.py  utils.py
src/core/sheets/: __init__.py  _hostel_sheets.py  _models.py  _parser.py  hostel_sheets.py  models.py  parser.py  types.py
src/core/sheets/parser/: __init__.py  parser.py
src/core/vk/: __init__.py  _api.py  _dialogs_conversation.py  _manager.py  _utils.py  api.py  conversation.py  dialogs_conversation.py  manager.py  old_user_conversation.py  utils.py  vkbottle_bot_user_longpool.py
src/core/vk/base/: __init__.py  _bot.py  _labeler.py  bot.py  labeler.py
src/extensions/google_sheets/: __init__.py  api.py
src/integration/google_sheets/: __init__.py  _api.py  _utils.py
src/utils/: __init__.py  env_type.py  logger.py
